# infra

./: .gitignore  docker-build.sh  docker-compose.yml  flake.nix  hcloud.tf  jump.cloud-config.yaml  nodes.cloud-config.yaml
.github/workflows/: build-docker.yml  deploy.yaml
apps/admin/: Cargo.toml
apps/admin/src/: main.rs
apps/backend/: .env  Cargo.toml  package-lock.json  package.json  webpack.config.js
apps/backend/.sqlx/: query-1f6a064040f3ff51b57e562bbc03ff8d4060294ebdc2bcf8fe5b70d6c57e78f8.json  query-22ebc9546f3eb44c343aee3aaaf4048803a78d171d6bc823198709365cc2e999.json  query-46cb956ca2ca25d724fac10f31f3c40c978bc779ee167ccd6e8ba11eb3b7723e.json  query-4ac782aca1fe0cd4aa433508ce0077e27dd1fe10c8a1513821a300fe2b2d20f9.json  query-85fb9413741086a17300ebe7c13e9288242902a043823dfdae256acf2b4ae9e0.json  query-917b353f4409ce14cbf5e7b97489196b437c6681fc05939614dc59f5d889e896.json  query-ba4f5b0c810cf965796951845dd3687843b8688341b084812f45246cee9df379.json  query-d3eaacb35af86f74fdbbcb4a56f2da4c986a2bb8f2ac85f6cf8141119fb10d84.json  query-e5e995d778768c200ff75781df6069dd998f456bf60b85118719ea20657cabdd.json  query-fd135f23933bd67f62ca8f9292b09da822e735cf986f36e916f8fe7661b48819.json
apps/backend/frontend/: style.css
apps/backend/migrations/: 0000-service-accounts.sql  0001-service-accounts-token-value.sql  20230820103845_service_accounts.sql  20230820134611_allow_app_user.sql  20231029150502_blog_posts.sql  20231105173846_fix_permissions_posts.sql
apps/backend/src/: database.rs  main.rs  secrets.rs  service_accounts.rs  tracing.rs
apps/backend/src/blog/: mod.rs
apps/backend/src/blog/posts/: mod.rs  read.rs
apps/backend/src/blog/views/: post.rs
apps/backend/templates/: base.html  index.html  post.html
clusters/ramona/: cert-manager-letsencrypt.yaml  cert-manager.yaml  deployment.yaml  external-dns.yaml  ingress-nginx.yaml  ingress.yaml  service.yaml
clusters/ramona/flux-system/: gotk-sync.yaml
deployer/: Cargo.toml
deployer/src/: main.rs
docker/pginit/: init-user.sh
infrastructure/clusters/ramona/: 0-cert-manager.yaml  cloudnativepg.yaml  external-dns.yaml  ingress-nginx.yaml  ingress.yaml
infrastructure/clusters/ramona/apps-backend/: database.yaml  deployment.yaml  image-policy.yaml  (+3 more)
infrastructure/terraform/: .terraform.lock.hcl  main.tf
machines/: jump.nix
terraform/: .terraform.lock.hcl  main.tf
terraform/kubernetes/: setup.tf
tools/local-start/: Cargo.toml
tools/local-start/src/: main.rs
tools/local-start/src/state/: mod.rs  storage.rs
(+1 files in other folders)
