[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["tokio-rustls", "rustls-tls-webpki-roots", "json"], default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }