[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
sqlx= { version = "0.6", features = ["runtime-tokio-rustls", "migrate", "postgres", "time", "uuid"] }
time = "0.3.26"
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
