[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
sqlx= { version = "0.7", features = ["runtime-tokio-rustls", "migrate", "postgres", "time", "uuid"] }
time = "0.3.26"
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
tracing = "0.1.37"
opentelemetry = { version = "0.20.0", features=["rt-tokio"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-otlp = { version = "0.13.0", features=["tokio", "http-proto", "reqwest-client", "reqwest-rustls", "opentelemetry-http"] }
tracing-subscriber = { version = "0.3.17", features=["env-filter"] }
tonic = "0.9.2"
reqwest = { version = "0.11.18", features = ["tokio-rustls", "rustls-tls-webpki-roots"], default-features = false }
tower-http = { version = "0.4.4", features = ["tokio", "trace"] }
thiserror = "1.0.48"
dotenvy = "0.15.7"
