[package]
name = "local-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
serde = {version="1.0.188",features = ["derive"]}
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["v4"] }
